Closed Bug 1671996 Opened 5 years ago Closed 5 years ago

Signed right shift 8x16 by constant does not work if src != dest

Categories

(Core :: JavaScript: WebAssembly, defect, P3)

x86_64
All
defect

Tracking

()

RESOLVED FIXED
84 Branch
Tracking Status
firefox84 --- fixed

People

(Reporter: lth, Assigned: lth)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

An oversight, because both compilers force src == dest and this doesn't currently matter: if src != dest, the code will use the old value of dest. But the protocol for the masm API is that the code generator patterns should work for all register assignments, so let's fix it.

Copy src -> dest if they are unequal; moveSimd128 avoids redundant moves.

Depends on D94003

Pushed by lhansen@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/202d806bac14 Do not use garbage bits if srcreg not same as destreg. r=jseward
Pushed by lhansen@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/1168298328ee Do not use garbage bits if srcreg not same as destreg. r=jseward
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 84 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: