Bug 1671996 - Do not use garbage bits if srcreg not same as destreg.  r=jseward

Copy src -> dest if they are unequal; moveSimd128 avoids redundant moves.

Differential Revision: https://phabricator.services.mozilla.com/D94073